<resources>
    <string name="app_name">Couch Potato</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="user">User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="see_more">See more</string>
    <string name="popular">Popular</string>
    <string name="new_word">New</string>
    <string name="cast">Cast</string>
    <string name="movie_duration">%1$dh %2$dm</string>
</resources>