<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/house_01"
        android:title="@string/home"
        app:showAsAction="ifRoom"
         />
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/search_magnifying_glass"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/star"
        android:title="@string/favorites"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/userFragment"
        android:icon="@drawable/user_01"
        android:title="@string/user"
        app:showAsAction="ifRoom" />
</menu>